# Hand2World

./: .gitignore  README.md  predict.py  requirements.txt
configs/: wan_civitai_5b.yaml
examples/: ar.json  bidirectional.json
examples/espressomachine_grab/: camera.json
examples/microwave_grab/: camera.json
examples/mixer_use/: camera.json
examples/phone_use/: camera.json
examples/waffleiron_use/: camera.json
hand2world_demo/client/: bridge.py  client.py  display.py  run.sh  ws_client.py
hand2world_demo/hand2world-cam/: README.md  hand2world_cam_SDK.py  pyproject.toml
hand2world_demo/hand2world-cam/docs/: protocol.md  setup.md
hand2world_demo/hand2world-cam/ios/hand2world-cam/: make_app_icon.py  project.yml
hand2world_demo/hand2world-cam/ios/hand2world-cam/hand2world-cam/: ARSessionManager.swift  CaptureSettings.swift  ContentView.swift  FrameSender.swift  Hand2WorldCamApp.swift  Info.plist
hand2world_demo/hand2world-cam/ios/hand2world-cam/hand2world-cam.xcodeproj/: project.pbxproj
hand2world_demo/server/: config.py  engine.py  run.sh  server.py  wire.py
hand2world_model/: __init__.py  cf_schedulers.py
hand2world_model/data/: __init__.py  utils.py
hand2world_model/models/: __init__.py  attention_utils.py  cache_utils.py  causal_patch.py  lightx2v_tae.py  wan_camera_adapter.py  wan_text_encoder.py  wan_transformer3d.py  wan_vae3_8.py
hand2world_model/pipeline/: __init__.py  blockwise_engine.py  causal_infer.py  pipeline_wan2_2_fun_control.py
hand2world_model/utils/: __init__.py  lora_utils.py
(+14 files in other folders)
