[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hand2world-cam"
version = "0.2.0"
description = "Single-file Mac-side SDK for the hand2world-cam ARKit streamer"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "msgpack>=1.0",
    "websockets>=12",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
fast = ["pyglet>=2"]

[project.scripts]
hand2world-cam = "hand2world_cam_SDK:_cli"

[tool.hatch.build.targets.wheel]
only-include = ["hand2world_cam_SDK.py"]
